--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,27 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "lib": ["es2017", "es7", "es6", "dom"],
     "declaration": true,
     "outDir": "dist",
+    "sourceMap": true,
     "strict": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true, 
+    "strictNullChecks": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,    
+    "removeComments": true,
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "pretty":true,
+    "typeRoots": ["node_modules/@types"],
+    "types": ["@types/jasmine"]
   },
-  "include": ["./src/"]
+  "include": ["src", "test"],
+  "exclude": ["dist", "node_modules"]
 }
