--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "lint": "tslint --format stylish --project tsconfig.json",
     "prepublishOnly": "npm run lint && karma start --single-run && npm run build"
   },
-  "dependencies": {
-    "reflect-metadata": "^0.1.13"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jasmine": "^3.5.10",
     "jasmine-core": "^3.5.0",
@@ -31,6 +29,7 @@
     "karma-jasmine": "^3.1.1",
     "karma-spec-reporter": "0.0.32",
     "karma-typescript": "^4.1.1",
+    "reflect-metadata": "^0.1.13",
     "tslint": "^5.20.1",
     "tslint-config-standard-plus": "^2.3.0",
     "typescript": "^3.8.3"
